[package]
name = "repack"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]

# Utils
bitflags = "2.4.1"
num_enum = "0.7"
thiserror = "1"
futures = "0.3"
binrw = "0.13"

swapbytes = { version = "0.2" }

# Serialization / Deserialization
serde = { version = "1", features = ["derive"] }
serde_ini = "0.2"
